fix: rspress-sidebar-group divider style in dark mode

--- a/packages/core/src/theme-default/components/Sidebar/index.module.scss
+++ b/packages/core/src/theme-default/components/Sidebar/index.module.scss
@@ -105,6 +105,12 @@
     left: 12px;
     width: 1px;
     height: 100%;
-    background-color: var(--rp-c-gray-light-4);
+    background-color: var(--rp-c-bg-mute);
+  }
+}
+
+:global(.dark .rspress-sidebar-group) {
+  &::before {
+    background-color: var(--rp-c-bg-mute);
   }
 }
